<resources>
    <string name="app_name">Крестики-нолики</string>
    <string name="enter_your_name">Введите ваше имя:</string>
    <string name="enter_your_sign">Выберите знак:</string>
    <string name="crosses">X</string>
    <string name="nulls">O</string>
    <string name="next">Начать игру</string>
    <string name="name_error">Введите своё имя</string>
    <string name="check_box_error">Выбреите знак</string>
    <string name="new_game">Новая игра</string>
    <string name="ai_level">Выберите сложность:</string>
    <string name="ai_easy_level">Легко</string>
    <string name="ai_hard_level">Нереально</string>
</resources>
